Design of outgoing calling screen

--- a/contact_app/pubspec.yaml
+++ b/contact_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   device_preview: ^1.1.0
   google_fonts: ^3.0.1
+  font_awesome_flutter: ^10.2.1
 
 dev_dependencies:
   flutter_test:
